--- a/app/src/main/res/layout/fragment_combate.xml
+++ b/app/src/main/res/layout/fragment_combate.xml
@@ -64,7 +64,7 @@
             android:layout_below="@+id/Combate_Marco_ClaseArmadura"
             android:layout_marginStart="35dp"
             android:layout_marginTop="-60dp"
-            android:text="10"
+            android:text=""
             android:textColor="@color/colorBlanco"
             android:textSize="22sp" />
 
@@ -108,7 +108,7 @@
             android:layout_below="@+id/Combate_Marco_Iniciativa"
             android:layout_marginStart="35dp"
             android:layout_marginTop="-65dp"
-            android:text="10"
+            android:text=""
             android:textColor="@color/colorBlanco"
             android:textSize="22sp" />
 
@@ -163,7 +163,7 @@
             android:layout_below="@+id/Combate_Marco_Velocidad"
             android:layout_marginStart="35dp"
             android:layout_marginTop="-65dp"
-            android:text="10"
+            android:text=""
             android:textColor="@color/colorBlanco"
             android:textSize="22sp" />
 
@@ -172,59 +172,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Combate_MarcoVelocidad"
+            android:layout_marginTop="40dp"
             android:text="@string/puntosGolpeActuales"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Combate_golpeActuales_valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="50"
-            android:textColor="@color/colorBlanco"
-            android:layout_toEndOf="@id/Combate_texto_puntosGolpe"
             android:layout_alignBaseline="@id/Combate_texto_puntosGolpe"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/Combate_texto_puntosGolpe"
+            android:autofillHints=""
+            android:inputType="number"
+            android:text=""
+            android:textColor="@color/colorBlanco" />
 
         <TextView
             android:id="@+id/Combate_texto_barraDiagonal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/Combate_golpeActuales_valor"
+            android:layout_toEndOf="@id/Combate_golpeActuales_valor"
             android:text="@string/barraDiagonal"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_toEndOf="@id/Combate_golpeActuales_valor"
-            android:layout_alignBaseline="@id/Combate_golpeActuales_valor" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Combate_golpeMaximo_valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100"
-            android:textColor="@color/colorBlanco"
+            android:layout_alignBaseline="@id/Combate_texto_barraDiagonal"
             android:layout_toEndOf="@id/Combate_texto_barraDiagonal"
-            android:layout_alignBaseline="@id/Combate_texto_barraDiagonal" />
+            android:autofillHints=""
+            android:inputType="number"
+            android:text=""
+            android:textColor="@color/colorBlanco" />
 
         <ImageView
             android:id="@+id/Combate_foto_salud"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:contentDescription="@string/puntosGolpeActuales"
-            app:srcCompat="@drawable/ic_cruz"
             android:layout_below="@id/Combate_texto_puntosGolpe"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp" />
+            android:layout_marginEnd="10dp"
+            android:contentDescription="@string/puntosGolpeActuales"
+            app:srcCompat="@drawable/ic_cruz" />
 
         <ProgressBar
             android:id="@+id/Combate_puntosGolpe_barraProgreso"
+            style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/Combate_texto_puntosGolpe"
-            android:progress="0"
-            android:paddingTop="10dp"
             android:layout_toEndOf="@+id/Combate_foto_salud"
-            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:paddingTop="10dp"
+            android:progress="0"
             android:progressDrawable="@layout/progressbar_rojo" />
 
         <TextView
@@ -232,154 +236,160 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Combate_puntosGolpe_barraProgreso"
+            android:layout_marginTop="40dp"
             android:text="@string/puntosGolpeTemporales"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Combate_golpeTemporal_valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20"
-            android:textColor="@color/colorBlanco"
-            android:layout_toEndOf="@id/Combate_texto_puntosGolpeTemporales"
             android:layout_alignBaseline="@id/Combate_texto_puntosGolpeTemporales"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/Combate_texto_puntosGolpeTemporales"
+            android:autofillHints=""
+            android:inputType="number"
+            android:text=""
+            android:textColor="@color/colorBlanco" />
 
         <TextView
             android:id="@+id/Combate_texto_dadosGolpe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Combate_texto_puntosGolpeTemporales"
+            android:layout_marginTop="40dp"
             android:text="@string/dadosGolpe"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Combate_numDados_valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1d6"
-            android:textColor="@color/colorBlanco"
-            android:layout_toEndOf="@id/Combate_texto_dadosGolpe"
             android:layout_alignBaseline="@id/Combate_texto_dadosGolpe"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/Combate_texto_dadosGolpe"
+            android:autofillHints=""
+            android:inputType="number"
+            android:text=""
+            android:textColor="@color/colorBlanco" />
 
         <TextView
             android:id="@+id/Combate_texto_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/Combate_numDados_valor"
             android:layout_alignBaseline="@id/Combate_numDados_valor"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_toEndOf="@id/Combate_numDados_valor"
             android:text="@string/total"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="40dp"/>
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/Combate_totalDados_valor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
-            android:textColor="@color/colorBlanco"
-            android:layout_toEndOf="@id/Combate_texto_total"
             android:layout_alignBaseline="@id/Combate_texto_total"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/Combate_texto_total"
+            android:autofillHints=""
+            android:inputType="number"
+            android:text=""
+            android:textColor="@color/colorBlanco" />
 
         <TextView
             android:id="@+id/Combate_texto_SalvacionesContraMuerte"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/Combate_totalDados_valor"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
             android:text="@string/salvacionesContraMuerte"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/Combate_totalDados_valor"/>
+            android:textSize="20sp" />
 
         <View
             android:id="@+id/Combate_barra_SalvacionesContraMuerte"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorPrimary"
             android:layout_below="@+id/Combate_texto_SalvacionesContraMuerte"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/Combate_texto_Exito"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Combate_barra_SalvacionesContraMuerte"
+            android:layout_marginTop="40dp"
             android:text="@string/exitos"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp" />
+            android:textSize="20sp" />
 
         <CheckBox
             android:id="@+id/Combate_exito_checkbox_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
-            android:layout_toEndOf="@id/Combate_texto_Exito"
             android:layout_alignBaseline="@id/Combate_texto_Exito"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/Combate_texto_Exito"
+            android:button="@drawable/custom_checkbox" />
 
         <CheckBox
             android:id="@+id/Combate_exito_checkbox_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
-            android:layout_toEndOf="@id/Combate_exito_checkbox_1"
             android:layout_alignBaseline="@id/Combate_exito_checkbox_1"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/Combate_exito_checkbox_1"
+            android:button="@drawable/custom_checkbox" />
 
         <CheckBox
             android:id="@+id/Combate_exito_checkbox_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
-            android:layout_toEndOf="@id/Combate_exito_checkbox_2"
             android:layout_alignBaseline="@id/Combate_exito_checkbox_2"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/Combate_exito_checkbox_2"
+            android:button="@drawable/custom_checkbox" />
 
         <TextView
             android:id="@+id/Combate_texto_fallo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Combate_texto_Exito"
+            android:layout_marginTop="40dp"
             android:text="@string/fallos"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp" />
+            android:textSize="20sp" />
 
         <CheckBox
             android:id="@+id/Combate_fallo_checkbox_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
+            android:layout_alignBaseline="@id/Combate_texto_fallo"
             android:layout_alignStart="@+id/Combate_exito_checkbox_1"
-            android:layout_alignBaseline="@id/Combate_texto_fallo" />
+            android:button="@drawable/custom_checkbox" />
 
         <CheckBox
             android:id="@+id/Combate_fallo_checkbox_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
-            android:layout_toEndOf="@id/Combate_fallo_checkbox_1"
             android:layout_alignBaseline="@id/Combate_fallo_checkbox_1"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/Combate_fallo_checkbox_1"
+            android:button="@drawable/custom_checkbox" />
 
         <CheckBox
             android:id="@+id/Combate_fallo_checkbox_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:button="@drawable/custom_checkbox"
-            android:layout_toEndOf="@id/Combate_fallo_checkbox_2"
             android:layout_alignBaseline="@id/Combate_fallo_checkbox_2"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@id/Combate_fallo_checkbox_2"
+            android:button="@drawable/custom_checkbox" />
 
     </RelativeLayout>
 
