--- a/app/src/main/res/layout/progressbar_naranja.xml
+++ b/app/src/main/res/layout/progressbar_naranja.xml
@@ -1,46 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
     <item android:id="@android:id/background">
+
         <shape>
+
             <corners android:radius="5dip" />
+
             <gradient
-                android:startColor="#ff9d9e9d"
+                android:angle="270"
                 android:centerColor="#ff5a5d5a"
                 android:centerY="0.75"
                 android:endColor="#ff747674"
-                android:angle="270"
-                />
+                android:startColor="#ff9d9e9d" />
         </shape>
     </item>
 
     <item android:id="@android:id/secondaryProgress">
+
         <clip>
+
             <shape>
+
                 <corners android:radius="5dip" />
+
                 <gradient
-                    android:startColor="#80ffd300"
+                    android:angle="270"
                     android:centerColor="#80ffb600"
                     android:centerY="0.75"
                     android:endColor="#a0ffcb00"
-                    android:angle="270"
-                    />
+                    android:startColor="#80ffd300" />
             </shape>
         </clip>
     </item>
-    <item
-        android:id="@android:id/progress"
-        >
+
+    <item android:id="@android:id/progress">
+
         <clip>
+
             <shape>
-                <corners
-                    android:radius="5dip" />
+
+                <corners android:radius="5dip" />
+
                 <gradient
-                    android:startColor="#E2A07C"
+                    android:angle="270"
                     android:endColor="#A17055"
-                    android:angle="270"/>
+                    android:startColor="#E2A07C" />
             </shape>
         </clip>
     </item>
