--- a/app/src/main/res/layout/fragment_ataques_conjuros.xml
+++ b/app/src/main/res/layout/fragment_ataques_conjuros.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:fillViewport="false"
@@ -30,20 +29,20 @@
             android:id="@+id/AtaquesConjuros_texto_Ataques"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/AtaquesConjuros_titulo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
             android:text="@string/ataques"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/AtaquesConjuros_titulo"/>
+            android:textSize="20sp" />
 
         <View
             android:id="@+id/AtaquesConjuros_barra_Ataques"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorPrimary"
             android:layout_below="@+id/AtaquesConjuros_texto_Ataques"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimary" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/AtaquesConjuros_Recycler_ataque"
@@ -55,28 +54,28 @@
             android:id="@+id/AtaquesConjuros_anadirAtaque_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/anadirAtaque"
             android:layout_below="@id/AtaquesConjuros_Recycler_ataque"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:text="@string/anadirAtaque" />
 
         <TextView
             android:id="@+id/AtaquesConjuros_texto_Conjuros"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/AtaquesConjuros_anadirAtaque_btn"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
             android:text="@string/conjuros"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginTop="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/AtaquesConjuros_anadirAtaque_btn"/>
+            android:textSize="20sp" />
 
         <View
             android:id="@+id/AtaquesConjuros_barra_Conjuros"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorPrimary"
             android:layout_below="@+id/AtaquesConjuros_texto_Conjuros"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimary" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/AtaquesConjuros_Recycler_conjuros"
@@ -88,9 +87,9 @@
             android:id="@+id/AtaquesConjuros_anadirConjuro_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/anadirConjuro"
             android:layout_below="@id/AtaquesConjuros_Recycler_conjuros"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:text="@string/anadirConjuro" />
 
     </RelativeLayout>
 
