--- a/app/src/main/res/layout/fragment_lanzar_dados.xml
+++ b/app/src/main/res/layout/fragment_lanzar_dados.xml
@@ -114,8 +114,8 @@
             android:layout_height="100dp"
             android:layout_below="@+id/LanzarDados_lanzar_1d4_btn"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="50dp"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="50dp"
             android:contentDescription="@string/unoddiez"
             android:src="@drawable/placeholder_1d10" />
 
@@ -213,10 +213,10 @@
             android:layout_below="@+id/LanzarDados_1d100_foto"
             android:layout_alignParentStart="true"
             android:layout_marginStart="88dp"
+            android:layout_marginTop="-90dp"
             android:text="@string/uno"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            android:layout_marginTop="-90dp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/LanzarDados_texto_1d100"
@@ -255,11 +255,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/LanzarDados_1d100_foto"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="-90dp"
             android:layout_marginEnd="90dp"
             android:text="@string/uno"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp"
-            android:layout_marginTop="-90dp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/LanzarDados_texto_1du"
@@ -282,4 +282,5 @@
             android:text="@string/lanzar" />
 
     </RelativeLayout>
+
 </ScrollView>
