--- a/app/src/main/res/layout/layout_dialog_carga.xml
+++ b/app/src/main/res/layout/layout_dialog_carga.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorSecondaryDark"
-    android:padding="10dp"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <ProgressBar
         android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cargando"
-        android:textSize="24sp"
-        android:layout_marginStart="10dp"
         android:layout_gravity="center_vertical"
-        android:textColor="@color/colorPrimary"/>
+        android:layout_marginStart="10dp"
+        android:text="@string/cargando"
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp" />
 
 </LinearLayout>
