--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -13,42 +13,43 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:contentDescription="@string/ficha"
-        app:srcCompat="@drawable/banner_dungeons_and_dragons"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        app:srcCompat="@drawable/banner_dungeons_and_dragons" />
 
     <TextView
         android:id="@+id/nav_header_nombrePersonaje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre personaje"
         android:layout_below="@+id/nav_header_banner"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/nav_header_correoElectronico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correo electrónico"
-        android:layout_below="@+id/nav_header_nombrePersonaje"/>
+        android:layout_below="@+id/nav_header_nombrePersonaje"
+        android:text="" />
 
     <ProgressBar
         android:id="@+id/nav_header_nivel_barraProgreso"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:progress="50"
-        android:layout_toEndOf="@+id/nav_header_correoElectronico"
         android:layout_alignBottom="@+id/nav_header_nombrePersonaje"
-        android:paddingTop="10dp"
+        android:layout_toEndOf="@+id/nav_header_correoElectronico"
         android:paddingStart="20dp"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:progressDrawable="@layout/progressbar_gris"/>
+        android:paddingEnd="0dp"
+        android:paddingTop="10dp"
+        android:progress="50"
+        android:progressDrawable="@layout/progressbar_gris" />
 
     <TextView
         android:id="@+id/nav_header_nivelPersonaje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nivel 4"
         android:layout_below="@+id/nav_header_nivel_barraProgreso"
-        android:layout_alignEnd="@+id/nav_header_nivel_barraProgreso"/>
+        android:layout_alignEnd="@+id/nav_header_nivel_barraProgreso"
+        android:text="" />
 
 </RelativeLayout>
